--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "src/ledger-user"]
 	path = src/ledger-user
-	url = https://github.com/cosmos/ledger-cosmos-app
+	url = git@github.com:SandBlockio/ledger-sandblock-app.git
 [submodule "src/ledger-val"]
 	path = src/ledger-val
 	url = git@github.com:tendermint/ledger-validator-app.git
